# shadyurl

./: .gitignore  README.md  config.toml  config.toml.example  init.sh  meson.build  mimetypes.txt
include/: certificate.hpp  daemon.hpp  generate.hpp  http_server.hpp  log.hpp  meson.build  mime.hpp  multipart_wrapper.hpp  parseqs.hpp  path.hpp  request.hpp  server_certificate.hpp  server_state.hpp  session.hpp  sqlite_helper.hpp
server/: index.html  post.html
src/: certificate.cpp  daemon.cpp  generate.cpp  http_server.cpp  log.cpp  main.cpp  meson.build  mime.cpp  multipart_wrapper.cpp  parseqs.cpp  path.cpp  server_certificate.cpp  server_state.cpp  session.cpp
subprojects/: inja.wrap  multipart_parser_c.wrap
