headers = ['generate.hpp',
           'mime.hpp',
           'multipart_wrapper.hpp',
           'parseqs.hpp',
           'path.hpp',
           'request.hpp',
           'server_certificate.hpp',
           'session.hpp',
           'sqlite_helper.hpp',
           'toml.hpp']
install_headers(headers)
