headers = ['daemon.hpp',
           'generate.hpp',
           'log.hpp',
           'mime.hpp',
           'multipart_wrapper.hpp',
           'parseqs.hpp',
           'path.hpp',
           'request.hpp',
           'server_certificate.hpp',
           'server_state.hpp',
           'session.hpp',
           'sqlite_helper.hpp']
install_headers(headers)
