sources = ['generate.cpp',
           'main.cpp',
           'mime.cpp',
           'multipart_wrapper.cpp',
           'parseqs.cpp',
           'path.cpp',
           'session.cpp',
           'server_certificate.cpp']
http_server_executable = executable('http_server',
                                    sources,
                                    include_directories : inc,
                                    dependencies : [boost_dep,
                                                    openssl_dep,
                                                    thread_dep,
                                                    sqlite_dep,
                                                    inja_dep,
                                                    multipart_parser_c_dep])
